plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.server'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

/* openfeign 설정*/
ext {
	springCloudVersion = '2023.0.0'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	implementation 'com.h2database:h2' // H2 데이터베이스 의존성 추가 (테스트용)
    implementation 'com.auth0:java-jwt:4.4.0' // jwt 설정
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // oauth2 client
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' // s3

	/* mysql 데이터베이스 설정 */
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'com.mysql:mysql-connector-j'

	// 외부 api 호출
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	implementation "org.bouncycastle:bcpkix-jdk15to18:1.78.1"

	// Jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Querydsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// thymeLeaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

	// Spring Batch
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-quartz'
	testImplementation 'org.springframework.batch:spring-batch-test'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mockito:mockito-core:4.8.0'
	testImplementation 'org.mockito:mockito-inline:3.12.4'
	testRuntimeOnly 'com.h2database:h2'

	// JUnit 5 (JUnit Jupiter) 의존성 명시적 선언
//	testImplementation 'org.junit.jupiter:junit-jupiter-api'
//	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
//	testImplementation 'org.mockito:mockito-core'
	testImplementation 'org.mockito:mockito-junit-jupiter'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register('copyYamlFiles', Copy) {
	from './BE-submodule-data'
	include '**/*'
	into 'src/main/resources'
}

processResources {
	dependsOn tasks.named('copyYamlFiles')
}